# STM32G474

./: .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Core  README.md  STM32G474.code-workspace  STM32G474.ioc  STM32G474XX_FLASH.ld  create_symlinks.ps1  ide-config.cmake  startup_stm32g474xx.s
Core/Inc/: main.h
Core/Src/: main.c
app/: .gitignore  CMakeLists.txt  app_tasks.c  app_tasks.h
app/Inc/: app_tests.h  freertos_tasks.h  freertos_types.h  hal_types.h  logging.h  stm32-hal-calls.h
app/Inc/BQ40Z80/: bq40z80.h  bq40z80_types.h
app/Src/: logging.cpp  placeholder.cpp
app/Src/BQ40Z80/: CMakeLists.txt
app/Src/BQ40Z80/Inc/: bq40z80_internal.h
app/Src/BQ40Z80/Src/: bq40z80.cpp  bq40z80_lowlevel.cpp
app/Src/RTT/: CMakeLists.txt
app/Src/RTT/Src/: SEGGER_RTT_Syscalls_GCC.c
app/Src/Tasks/: CMakeLists.txt  battery_monitor_task.cpp  gpio_bruteforce_task.cpp  hal_implementations.cpp  smbus_task.cpp  uart_task.cpp  vescan_task.cpp
app/Src/Tasks/Inc/: battery_monitor_task.h  freertos_tasks.h  hal_types.h  vescan_task.h
app/Src/VESCCan/: CMakeLists.txt
app/Src/VESCCan/Inc/: VESC.h  VESC_Consts.h  VESC_Convert.h  VESC_Endian.h  VESC_Status_10_Consts.h  VESC_Status_11_Consts.h  VESC_Status_9_Consts.h  VESC_Structs.h  vesc2halcan.h
app/Src/VESCCan/Src/: VESC_Convert.c  VESC_Endian.c  vesc2halcan.c
app/tests/: CMakeLists.txt
app/tests/listeners/: rtt_test_listener.cpp  rtt_test_listener.h
app/tests/mocks/: freertos_mock.cpp  hal_delay_mock.cpp  hal_i2c_mock.cpp  hal_i2c_mock.h  hal_types.h
app/tests/runner/: gtest_minimal.cpp  gtest_minimal.h  test_runner_task.cpp  test_runner_task.h
app/tests/unit/: test_bq40z80_basic.cpp  test_bq40z80_driver.cpp
app/uTests/: CMakeLists.txt  test_bq40z80_advanced.cpp  test_bq40z80_basic.cpp  test_runner.cpp  test_runner.h
app/uTests/include/: test_runner.h
app/uTests/src/: test_runner.cpp
app/uTests/tests/: sample_test.cpp
boards/: .gitignore
boards/custom-G474/: CMakeLists.txt  STM32G474 — kopia.ioc  STM32G474.ioc  STM32G474RCTX_FLASH.ld  STM32G474RCTX_RAM.ld  STM32G474XX_FLASH.ld  ide-config.cmake
boards/custom-G474/Core/Inc/: FreeRTOSConfig.h  i2c.h  main.h  stm32g4xx_hal_conf.h
boards/custom-G474/Core/Src/: app_freertos.c  fdcan.c  gpio.c  i2c.c  main.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  syscalls.c  usart.c
boards/custom-G474/cmake/: freertos.cmake  gcc-arm-none-eabi.cmake
boards/custom-G474/cmake/stm32cubemx/: CMakeLists.txt
boards/nucleo-H755ZI-Q/: .mxproject  CMakeLists.txt  mx-generated.cmake  nucleo-H755ZI-Q.ioc
boards/nucleo-H755ZI-Q/CM4/: CMakeLists.txt  mx-generated.cmake
boards/nucleo-H755ZI-Q/CM4/Core/Inc/: stm32h7xx_it.h
boards/nucleo-H755ZI-Q/CM4/Core/Src/: main.c
boards/nucleo-H755ZI-Q/CM7/: CMakeLists.txt  mx-generated.cmake
boards/nucleo-H755ZI-Q/CM7/Core/Src/: main.c
boards/nucleo-L476RG/: CMakeLists.txt  ide-config.cmake  nucleo-L476RG.ioc
boards/nucleo-L476RG/Core/Inc/: FreeRTOSConfig.h
boards/nucleo-L476RG/Core/Src/: main.c  stm32l4xx_it.c
boards/nucleo-L476RG/cmake/: gcc-arm-none-eabi.cmake
boards/nucleo-L476RG/cmake/stm32cubemx/: CMakeLists.txt
boards/nucleo-U575ZI-Q/: CMakeLists.txt  ide-config.cmake  nucleo-U575ZI-Q.ioc
boards/nucleo-U575ZI-Q/Core/Inc/: FreeRTOSConfig.h  i2c.h  main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
boards/nucleo-U575ZI-Q/Core/Src/: gpio.c  i2c.c  main.c  stm32u5xx_it.c
boards/nucleo-U575ZI-Q/cmake/: freertos.cmake  gcc-arm-none-eabi.cmake
boards/nucleo-U575ZI-Q/cmake/stm32cubemx/: CMakeLists.txt
cmake/: README.md  stm32cubeide.cmake  vscode.cmake
cmake/stm32cubemx/: CMakeLists.txt
cmake/templates/: Makefile.in  cproject.in  language.settings.xml.in  org.eclipse.cdt.core.prefs.in  project.in  vscode_c_cpp_properties.json.in  vscode_extensions.json.in  vscode_launch.json.in  vscode_settings.json.in  vscode_tasks.json.in  vscode_tasks_lib.json.in
toolchains/: .gitignore  arm-gcc-base.cmake  cortex-m0plus.cmake  cortex-m33.cmake  cortex-m4f.cmake  cortex-m7.cmake
uTBoards/nucleo-U575ZI-Q/: CMakeLists.txt  nucleo-U575ZI-Q.ioc
uTBoards/nucleo-U575ZI-Q/Core/Inc/: FreeRTOSConfig.h  i2c.h  main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
uTBoards/nucleo-U575ZI-Q/Core/Src/: i2c.c  main.c  stm32u5xx_it.c  usart.c
uTBoards/nucleo-U575ZI-Q/cmake/: freertos.cmake  gcc-arm-none-eabi.cmake
uTBoards/nucleo-U575ZI-Q/cmake/stm32cubemx/: CMakeLists.txt
